11381 ldapcachemgr: NULL pointer errors Reviewed by: Peter Tribble <peter.tribble@gmail.com> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>